# RayTracer20

./: Application.cpp  CMakeFiles.txt  CMakeLists.txt  README.md  application.ixx  build_modules.bat  build_script.bat  camera.ixx  clean_up.bat  custom_concepts.ixx  light.ixx  material.ixx  matrix.ixx  polygon.ixx  ray.ixx  render.ppm  render_constants.ixx  renderer.ixx  saveppm.ixx  shell.ixx  surface.ixx  test.ixx  vec.ixx
src/: camera.ixx  custom_concepts.ixx  geometry.ixx  hitnode.ixx  light.ixx  material.ixx  matrix.ixx  polygon.ixx  ray.ixx  render_constants.ixx  renderer.ixx  saveppm.ixx  shell.ixx  sphere.ixx  surface.ixx  test.ixx  vec.ixx
